Fix for #1841 (streched, pixellated buttons in IE); width:1px in IE6 so that the button does not take up too much space.
svn changeset:5014/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -20,6 +20,7 @@
 
 /* fixes streched buttons in IE6 */
 * html .i-button {
+	width: 1px;
 	overflow: visible;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -30,6 +31,7 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
 
 /* Disabled by default
 .i-checkbox-error {
